--- a/frontpage.html
+++ b/frontpage.html
@@ -9,4 +9,11 @@ $(document).ready(function(){
     $('[data-toggle="popover"]').popover(); 
 });
 </script>
-
+<style>
+#notice-board img{
+	opacity: 0.75;
+}
+#notice-board img:hover{
+	opacity: 1.0;
+}
+</style>
